infrastructure/cilium/policies/overlays/lab/argocd/argocd-apiserver-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-kube-apiserver
  namespace: argocd
spec:
  description: "Permite acceso de Argo CD al Kubernetes API server"
  endpointSelector: {}

  egress:
    - toEntities:
        - kube-apiserver
