infrastructure/cilium/policies/overlays/lab/argocd/argocd-dns-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-dns
  namespace: argocd
spec:
  description: "Permite DNS hacia CoreDNS para resolucion de nombres"
  endpointSelector: {}

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
