infrastructure/cilium/policies/overlays/lab/argocd/argocd-github-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-github
  namespace: argocd
spec:
  description: "Permite acceso HTTPS a GitHub"
  endpointSelector: {}

  egress:
    - toFQDNs:
        - matchName: github.com
        - matchName: api.github.com
        - matchPattern: "*.github.com"
        - matchName: raw.githubusercontent.com
        - matchName: codeload.github.com
        - matchName: objects.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
