infrastructure/cilium/policies/overlays/lab/argocd/argocd-internal-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-internal
  namespace: argocd
spec:
  description: "Permite trafico interno dentro del namespace argocd"
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd
