infrastructure/cilium/policies/overlays/lab/argocd/argocd-restricted-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-restricted-egress
  namespace: argocd
spec:
  description: "Permite trafico interno en argocd, DNS, GitHub y kube-apiserver"
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd

  egress:
    # Comunicación interna dentro del namespace argocd
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: argocd

    # DNS hacia CoreDNS + inspección DNS necesaria para toFQDNs
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

    # Acceso al API server de Kubernetes
    - toEntities:
        - kube-apiserver

    # Acceso HTTPS a GitHub
    - toFQDNs:
        - matchName: github.com
        - matchName: api.github.com
        - matchPattern: "*.github.com"
        - matchName: raw.githubusercontent.com
        - matchName: codeload.github.com
        - matchName: objects.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Repos Helm / OCI 
    - toFQDNs:
        - matchName: helm.releases.hashicorp.com
        - matchName: charts.jetstack.io
        - matchName: quay.io
        - matchName: helm.cilium.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
